--- a/JS and CSS Clock/index.html
+++ b/JS and CSS Clock/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-
+    <!-- Clock HTML-->
     <div class="clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
@@ -15,7 +15,7 @@
       </div>
     </div>
 
-
+  <-- CSS -->
   <style>
     html {
       background: #018DED url(https://unsplash.it/1500/1000?image=881&blur=5);
@@ -70,6 +70,7 @@
 
   </style>
 
+  <-- JavaScript-->
   <script>
    // Create a function that we use to set the date 
    function setDate(){
